@@ -1,3 +1,4 @@
+Converted from Function2<Double,Double,Double> to named interface DispersionFunction
 > Fixed: Tools should drop in the box when any piece is dropped in the box, not when the center of mass of all components is dropped in
 # 0.00.27 (49883) Mar 16, 2011
 # 0.00.26 (49881) Mar 16, 2011
